# Stock

./: .gitignore  README.md  pyproject.toml  requirements.txt  stock_terminal.py  stock_terminal1.py
charts/: README.md
src/: __init__.py  main.py  modern_main.py  modern_stock.py  stock.py  stock_query.py
tests/: test_stock.py
